[gd_scene load_steps=40 format=2]

[ext_resource path="res://en_suite_4k.hdr" type="Texture" id=1]
[ext_resource path="res://Tub.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/splash3.png" type="Texture" id=3]
[ext_resource path="res://fx/wake.tres" type="QuadMesh" id=4]
[ext_resource path="res://sounds/faucet.wav" type="AudioStream" id=5]
[ext_resource path="res://FaucetArea.gd" type="Script" id=6]
[ext_resource path="res://Water.gd" type="Script" id=7]
[ext_resource path="res://textures/water_normal.jpg" type="Texture" id=8]
[ext_resource path="res://Intro.gd" type="Script" id=9]
[ext_resource path="res://Duck.tscn" type="PackedScene" id=10]
[ext_resource path="res://sounds/good_bad_ugly.wav" type="AudioStream" id=11]
[ext_resource path="res://Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://InputManager.gd" type="Script" id=13]
[ext_resource path="res://OrbitTargetCam.tscn" type="PackedScene" id=14]
[ext_resource path="res://Preloader.gd" type="Script" id=15]
[ext_resource path="res://GunFX.gd" type="Script" id=16]
[ext_resource path="res://DuckLauncher.gd" type="Script" id=17]
[ext_resource path="res://GameOverlay.tscn" type="PackedScene" id=18]
[ext_resource path="res://TitleScreen.tscn" type="PackedScene" id=19]
[ext_resource path="res://PausedScreen.tscn" type="PackedScene" id=20]
[ext_resource path="res://GameOverScreen.tscn" type="PackedScene" id=21]
[ext_resource path="res://fx/water.tres" type="Shader" id=22]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
auto_exposure_enabled = true
ss_reflections_max_steps = 128
glow_enabled = true

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array( 0.0137844, -5.02057, 0, -0.0137844, 5.02057, 0, 0, 11, 0, 0.0311279, 4.87035, -0.0266113, 0, 0, 0, -7, 11, 0, 0, 0, 0, 0, 0, 0, -7.02874, 1.71937, -3.07236e-07 ),
"tilts": PoolRealArray( 0, 0, 0 )
}

[sub_resource type="SpatialMaterial" id=4]
params_cull_mode = 2
metallic = 1.0
roughness = 0.1

[sub_resource type="Shader" id=5]
code = "shader_type spatial;
uniform sampler2D texture_albedo : hint_albedo;
uniform float softness = 0.003;
uniform vec4 tint : hint_color;

void fragment() {
	vec4 a1 = texture(texture_albedo, UV * 2.0 + vec2(0.1 * TIME, -1.5 * TIME)); 
	vec4 a2 = texture(texture_albedo, UV * 1.5 + vec2(-0.3 * TIME, -1.2 * TIME)); 
	ALBEDO = mix(a1.rgb, a2.rgb, 0.5) * tint.rgb;
	ALPHA = clamp(ALBEDO.r / softness, 0.0, 1.0);
	
	METALLIC = 0.9;
	ROUGHNESS = 0.2;
	SPECULAR = 1.0;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/softness = 0.002
shader_param/tint = Color( 0.729412, 1, 0.67451, 1 )
shader_param/texture_albedo = ExtResource( 3 )

[sub_resource type="CylinderMesh" id=7]
material = SubResource( 6 )
top_radius = 0.75
bottom_radius = 0.75
height = 8.0

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 0.329412, 0.823529, 0.901961, 0.941176, 0.709804, 0.988235, 0.976471, 0.317647, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.4868 ), 0.0, 0.0, 0, 0, Vector2( 0.521301, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4527 ), -5.84678, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3( 0, 1, 0 )
spread = 30.0
gravity = Vector3( 0, -7, 0 )
initial_velocity = 2.5
angular_velocity = 243.37
angular_velocity_random = 0.25
scale = 2.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[sub_resource type="ConvexPolygonShape" id=13]
points = PoolVector3Array( 0, 4, 0.75, 0.0735129, 4, 0.746389, 0.146318, 4, 0.735589, 0.217714, 4, 0.717705, 0.287013, 4, 0.69291, 0.353548, 4, 0.661441, 0.416678, 4, 0.623602, 0.475795, 4, 0.579758, 0.53033, 4, 0.53033, 0.579758, 4, 0.475795, 0.623602, 4, 0.416678, 0.661441, 4, 0.353548, 0.69291, 4, 0.287013, 0.717705, 4, 0.217714, 0.735589, 4, 0.146318, 0.746389, 4, 0.0735129, 0.75, 4, 4.59243e-17, 0.746389, 4, -0.0735129, 0.735589, 4, -0.146318, 0.717705, 4, -0.217714, 0.69291, 4, -0.287013, 0.661441, 4, -0.353548, 0.623602, 4, -0.416678, 0.579758, 4, -0.475795, 0.53033, 4, -0.53033, 0.475795, 4, -0.579758, 0.416678, 4, -0.623602, 0.353548, 4, -0.661441, 0.287013, 4, -0.69291, 0.217714, 4, -0.717705, 0.146318, 4, -0.735589, 0.0735129, 4, -0.746389, 9.18485e-17, 4, -0.75, -0.0735129, 4, -0.746389, -0.146318, 4, -0.735589, -0.217714, 4, -0.717705, -0.287013, 4, -0.69291, -0.353548, 4, -0.661441, -0.416678, 4, -0.623602, -0.475795, 4, -0.579758, -0.53033, 4, -0.53033, -0.579758, 4, -0.475795, -0.623602, 4, -0.416678, -0.661441, 4, -0.353548, -0.69291, 4, -0.287013, -0.717705, 4, -0.217714, -0.735589, 4, -0.146318, -0.746389, 4, -0.0735129, -0.75, 4, -1.37773e-16, -0.746389, 4, 0.0735129, -0.735589, 4, 0.146318, -0.717705, 4, 0.217714, -0.69291, 4, 0.287013, -0.661441, 4, 0.353548, -0.623602, 4, 0.416678, -0.579758, 4, 0.475795, -0.53033, 4, 0.53033, -0.475795, 4, 0.579758, -0.416678, 4, 0.623602, -0.353548, 4, 0.661441, -0.287013, 4, 0.69291, -0.217714, 4, 0.717705, -0.146318, 4, 0.735589, -0.0735129, 4, 0.746389, -1.83697e-16, 4, 0.75, 0, 2.4, 0.75, 0.0735129, 2.4, 0.746389, 0.146318, 2.4, 0.735589, 0.217714, 2.4, 0.717705, 0.287013, 2.4, 0.69291, 0.353548, 2.4, 0.661441, 0.416678, 2.4, 0.623602, 0.475795, 2.4, 0.579758, 0.53033, 2.4, 0.53033, 0.579758, 2.4, 0.475795, 0.623602, 2.4, 0.416678, 0.661441, 2.4, 0.353548, 0.69291, 2.4, 0.287013, 0.717705, 2.4, 0.217714, 0.735589, 2.4, 0.146318, 0.746389, 2.4, 0.0735129, 0.75, 2.4, 4.59243e-17, 0.746389, 2.4, -0.0735129, 0.735589, 2.4, -0.146318, 0.717705, 2.4, -0.217714, 0.69291, 2.4, -0.287013, 0.661441, 2.4, -0.353548, 0.623602, 2.4, -0.416678, 0.579758, 2.4, -0.475795, 0.53033, 2.4, -0.53033, 0.475795, 2.4, -0.579758, 0.416678, 2.4, -0.623602, 0.353548, 2.4, -0.661441, 0.287013, 2.4, -0.69291, 0.217714, 2.4, -0.717705, 0.146318, 2.4, -0.735589, 0.0735129, 2.4, -0.746389, 9.18485e-17, 2.4, -0.75, -0.0735129, 2.4, -0.746389, -0.146318, 2.4, -0.735589, -0.217714, 2.4, -0.717705, -0.287013, 2.4, -0.69291, -0.353548, 2.4, -0.661441, -0.416678, 2.4, -0.623602, -0.475795, 2.4, -0.579758, -0.53033, 2.4, -0.53033, -0.579758, 2.4, -0.475795, -0.623602, 2.4, -0.416678, -0.661441, 2.4, -0.353548, -0.69291, 2.4, -0.287013, -0.717705, 2.4, -0.217714, -0.735589, 2.4, -0.146318, -0.746389, 2.4, -0.0735129, -0.75, 2.4, -1.37773e-16, -0.746389, 2.4, 0.0735129, -0.735589, 2.4, 0.146318, -0.717705, 2.4, 0.217714, -0.69291, 2.4, 0.287013, -0.661441, 2.4, 0.353548, -0.623602, 2.4, 0.416678, -0.579758, 2.4, 0.475795, -0.53033, 2.4, 0.53033, -0.475795, 2.4, 0.579758, -0.416678, 2.4, 0.623602, -0.353548, 2.4, 0.661441, -0.287013, 2.4, 0.69291, -0.217714, 2.4, 0.717705, -0.146318, 2.4, 0.735589, -0.0735129, 2.4, 0.746389, -1.83697e-16, 2.4, 0.75, 0, 0.8, 0.75, 0.0735129, 0.8, 0.746389, 0.146318, 0.8, 0.735589, 0.217714, 0.8, 0.717705, 0.287013, 0.8, 0.69291, 0.353548, 0.8, 0.661441, 0.416678, 0.8, 0.623602, 0.475795, 0.8, 0.579758, 0.53033, 0.8, 0.53033, 0.579758, 0.8, 0.475795, 0.623602, 0.8, 0.416678, 0.661441, 0.8, 0.353548, 0.69291, 0.8, 0.287013, 0.717705, 0.8, 0.217714, 0.735589, 0.8, 0.146318, 0.746389, 0.8, 0.0735129, 0.75, 0.8, 4.59243e-17, 0.746389, 0.8, -0.0735129, 0.735589, 0.8, -0.146318, 0.717705, 0.8, -0.217714, 0.69291, 0.8, -0.287013, 0.661441, 0.8, -0.353548, 0.623602, 0.8, -0.416678, 0.579758, 0.8, -0.475795, 0.53033, 0.8, -0.53033, 0.475795, 0.8, -0.579758, 0.416678, 0.8, -0.623602, 0.353548, 0.8, -0.661441, 0.287013, 0.8, -0.69291, 0.217714, 0.8, -0.717705, 0.146318, 0.8, -0.735589, 0.0735129, 0.8, -0.746389, 9.18485e-17, 0.8, -0.75, -0.0735129, 0.8, -0.746389, -0.146318, 0.8, -0.735589, -0.217714, 0.8, -0.717705, -0.287013, 0.8, -0.69291, -0.353548, 0.8, -0.661441, -0.416678, 0.8, -0.623602, -0.475795, 0.8, -0.579758, -0.53033, 0.8, -0.53033, -0.579758, 0.8, -0.475795, -0.623602, 0.8, -0.416678, -0.661441, 0.8, -0.353548, -0.69291, 0.8, -0.287013, -0.717705, 0.8, -0.217714, -0.735589, 0.8, -0.146318, -0.746389, 0.8, -0.0735129, -0.75, 0.8, -1.37773e-16, -0.746389, 0.8, 0.0735129, -0.735589, 0.8, 0.146318, -0.717705, 0.8, 0.217714, -0.69291, 0.8, 0.287013, -0.661441, 0.8, 0.353548, -0.623602, 0.8, 0.416678, -0.579758, 0.8, 0.475795, -0.53033, 0.8, 0.53033, -0.475795, 0.8, 0.579758, -0.416678, 0.8, 0.623602, -0.353548, 0.8, 0.661441, -0.287013, 0.8, 0.69291, -0.217714, 0.8, 0.717705, -0.146318, 0.8, 0.735589, -0.0735129, 0.8, 0.746389, -1.83697e-16, 0.8, 0.75, 0, -0.8, 0.75, 0.0735129, -0.8, 0.746389, 0.146318, -0.8, 0.735589, 0.217714, -0.8, 0.717705, 0.287013, -0.8, 0.69291, 0.353548, -0.8, 0.661441, 0.416678, -0.8, 0.623602, 0.475795, -0.8, 0.579758, 0.53033, -0.8, 0.53033, 0.579758, -0.8, 0.475795, 0.623602, -0.8, 0.416678, 0.661441, -0.8, 0.353548, 0.69291, -0.8, 0.287013, 0.717705, -0.8, 0.217714, 0.735589, -0.8, 0.146318, 0.746389, -0.8, 0.0735129, 0.75, -0.8, 4.59243e-17, 0.746389, -0.8, -0.0735129, 0.735589, -0.8, -0.146318, 0.717705, -0.8, -0.217714, 0.69291, -0.8, -0.287013, 0.661441, -0.8, -0.353548, 0.623602, -0.8, -0.416678, 0.579758, -0.8, -0.475795, 0.53033, -0.8, -0.53033, 0.475795, -0.8, -0.579758, 0.416678, -0.8, -0.623602, 0.353548, -0.8, -0.661441, 0.287013, -0.8, -0.69291, 0.217714, -0.8, -0.717705, 0.146318, -0.8, -0.735589, 0.0735129, -0.8, -0.746389, 9.18485e-17, -0.8, -0.75, -0.0735129, -0.8, -0.746389, -0.146318, -0.8, -0.735589, -0.217714, -0.8, -0.717705, -0.287013, -0.8, -0.69291, -0.353548, -0.8, -0.661441, -0.416678, -0.8, -0.623602, -0.475795, -0.8, -0.579758, -0.53033, -0.8, -0.53033, -0.579758, -0.8, -0.475795, -0.623602, -0.8, -0.416678, -0.661441, -0.8, -0.353548, -0.69291, -0.8, -0.287013, -0.717705, -0.8, -0.217714, -0.735589, -0.8, -0.146318, -0.746389, -0.8, -0.0735129, -0.75, -0.8, -1.37773e-16, -0.746389, -0.8, 0.0735129, -0.735589, -0.8, 0.146318, -0.717705, -0.8, 0.217714, -0.69291, -0.8, 0.287013, -0.661441, -0.8, 0.353548, -0.623602, -0.8, 0.416678, -0.579758, -0.8, 0.475795, -0.53033, -0.8, 0.53033, -0.475795, -0.8, 0.579758, -0.416678, -0.8, 0.623602, -0.353548, -0.8, 0.661441, -0.287013, -0.8, 0.69291, -0.217714, -0.8, 0.717705, -0.146318, -0.8, 0.735589, -0.0735129, -0.8, 0.746389, -1.83697e-16, -0.8, 0.75, 0, -2.4, 0.75, 0.0735129, -2.4, 0.746389, 0.146318, -2.4, 0.735589, 0.217714, -2.4, 0.717705, 0.287013, -2.4, 0.69291, 0.353548, -2.4, 0.661441, 0.416678, -2.4, 0.623602, 0.475795, -2.4, 0.579758, 0.53033, -2.4, 0.53033, 0.579758, -2.4, 0.475795, 0.623602, -2.4, 0.416678, 0.661441, -2.4, 0.353548, 0.69291, -2.4, 0.287013, 0.717705, -2.4, 0.217714, 0.735589, -2.4, 0.146318, 0.746389, -2.4, 0.0735129, 0.75, -2.4, 4.59243e-17, 0.746389, -2.4, -0.0735129, 0.735589, -2.4, -0.146318, 0.717705, -2.4, -0.217714, 0.69291, -2.4, -0.287013, 0.661441, -2.4, -0.353548, 0.623602, -2.4, -0.416678, 0.579758, -2.4, -0.475795, 0.53033, -2.4, -0.53033, 0.475795, -2.4, -0.579758, 0.416678, -2.4, -0.623602, 0.353548, -2.4, -0.661441, 0.287013, -2.4, -0.69291, 0.217714, -2.4, -0.717705, 0.146318, -2.4, -0.735589, 0.0735129, -2.4, -0.746389, 9.18485e-17, -2.4, -0.75, -0.0735129, -2.4, -0.746389, -0.146318, -2.4, -0.735589, -0.217714, -2.4, -0.717705, -0.287013, -2.4, -0.69291, -0.353548, -2.4, -0.661441, -0.416678, -2.4, -0.623602, -0.475795, -2.4, -0.579758, -0.53033, -2.4, -0.53033, -0.579758, -2.4, -0.475795, -0.623602, -2.4, -0.416678, -0.661441, -2.4, -0.353548, -0.69291, -2.4, -0.287013, -0.717705, -2.4, -0.217714, -0.735589, -2.4, -0.146318, -0.746389, -2.4, -0.0735129, -0.75, -2.4, -1.37773e-16, -0.746389, -2.4, 0.0735129, -0.735589, -2.4, 0.146318, -0.717705, -2.4, 0.217714, -0.69291, -2.4, 0.287013, -0.661441, -2.4, 0.353548, -0.623602, -2.4, 0.416678, -0.579758, -2.4, 0.475795, -0.53033, -2.4, 0.53033, -0.475795, -2.4, 0.579758, -0.416678, -2.4, 0.623602, -0.353548, -2.4, 0.661441, -0.287013, -2.4, 0.69291, -0.217714, -2.4, 0.717705, -0.146318, -2.4, 0.735589, -0.0735129, -2.4, 0.746389, -1.83697e-16, -2.4, 0.75, 0, -4, 0.75, 0.0735129, -4, 0.746389, 0.146318, -4, 0.735589, 0.217714, -4, 0.717705, 0.287013, -4, 0.69291, 0.353548, -4, 0.661441, 0.416678, -4, 0.623602, 0.475795, -4, 0.579758, 0.53033, -4, 0.53033, 0.579758, -4, 0.475795, 0.623602, -4, 0.416678, 0.661441, -4, 0.353548, 0.69291, -4, 0.287013, 0.717705, -4, 0.217714, 0.735589, -4, 0.146318, 0.746389, -4, 0.0735129, 0.75, -4, 4.59243e-17, 0.746389, -4, -0.0735129, 0.735589, -4, -0.146318, 0.717705, -4, -0.217714, 0.69291, -4, -0.287013, 0.661441, -4, -0.353548, 0.623602, -4, -0.416678, 0.579758, -4, -0.475795, 0.53033, -4, -0.53033, 0.475795, -4, -0.579758, 0.416678, -4, -0.623602, 0.353548, -4, -0.661441, 0.287013, -4, -0.69291, 0.217714, -4, -0.717705, 0.146318, -4, -0.735589, 0.0735129, -4, -0.746389, 9.18485e-17, -4, -0.75, -0.0735129, -4, -0.746389, -0.146318, -4, -0.735589, -0.217714, -4, -0.717705, -0.287013, -4, -0.69291, -0.353548, -4, -0.661441, -0.416678, -4, -0.623602, -0.475795, -4, -0.579758, -0.53033, -4, -0.53033, -0.579758, -4, -0.475795, -0.623602, -4, -0.416678, -0.661441, -4, -0.353548, -0.69291, -4, -0.287013, -0.717705, -4, -0.217714, -0.735589, -4, -0.146318, -0.746389, -4, -0.0735129, -0.75, -4, -1.37773e-16, -0.746389, -4, 0.0735129, -0.735589, -4, 0.146318, -0.717705, -4, 0.217714, -0.69291, -4, 0.287013, -0.661441, -4, 0.353548, -0.623602, -4, 0.416678, -0.579758, -4, 0.475795, -0.53033, -4, 0.53033, -0.475795, -4, 0.579758, -0.416678, -4, 0.623602, -0.353548, -4, 0.661441, -0.287013, -4, 0.69291, -0.217714, -4, 0.717705, -0.146318, -4, 0.735589, -0.0735129, -4, 0.746389, -1.83697e-16, -4, 0.75, 0, 4, 0, 0, 4, 0.75, 0.0735129, 4, 0.746389, 0.146318, 4, 0.735589, 0.217714, 4, 0.717705, 0.287013, 4, 0.69291, 0.353548, 4, 0.661441, 0.416678, 4, 0.623602, 0.475795, 4, 0.579758, 0.53033, 4, 0.53033, 0.579758, 4, 0.475795, 0.623602, 4, 0.416678, 0.661441, 4, 0.353548, 0.69291, 4, 0.287013, 0.717705, 4, 0.217714, 0.735589, 4, 0.146318, 0.746389, 4, 0.0735129, 0.75, 4, 4.59243e-17, 0.746389, 4, -0.0735129, 0.735589, 4, -0.146318, 0.717705, 4, -0.217714, 0.69291, 4, -0.287013, 0.661441, 4, -0.353548, 0.623602, 4, -0.416678, 0.579758, 4, -0.475795, 0.53033, 4, -0.53033, 0.475795, 4, -0.579758, 0.416678, 4, -0.623602, 0.353548, 4, -0.661441, 0.287013, 4, -0.69291, 0.217714, 4, -0.717705, 0.146318, 4, -0.735589, 0.0735129, 4, -0.746389, 9.18485e-17, 4, -0.75, -0.0735129, 4, -0.746389, -0.146318, 4, -0.735589, -0.217714, 4, -0.717705, -0.287013, 4, -0.69291, -0.353548, 4, -0.661441, -0.416678, 4, -0.623602, -0.475795, 4, -0.579758, -0.53033, 4, -0.53033, -0.579758, 4, -0.475795, -0.623602, 4, -0.416678, -0.661441, 4, -0.353548, -0.69291, 4, -0.287013, -0.717705, 4, -0.217714, -0.735589, 4, -0.146318, -0.746389, 4, -0.0735129, -0.75, 4, -1.37773e-16, -0.746389, 4, 0.0735129, -0.735589, 4, 0.146318, -0.717705, 4, 0.217714, -0.69291, 4, 0.287013, -0.661441, 4, 0.353548, -0.623602, 4, 0.416678, -0.579758, 4, 0.475795, -0.53033, 4, 0.53033, -0.475795, 4, 0.579758, -0.416678, 4, 0.623602, -0.353548, 4, 0.661441, -0.287013, 4, 0.69291, -0.217714, 4, 0.717705, -0.146318, 4, 0.735589, -0.0735129, 4, 0.746389, -1.83697e-16, 4, 0.75, 0, -4, 0, 0, -4, 0.75, 0.0735129, -4, 0.746389, 0.146318, -4, 0.735589, 0.217714, -4, 0.717705, 0.287013, -4, 0.69291, 0.353548, -4, 0.661441, 0.416678, -4, 0.623602, 0.475795, -4, 0.579758, 0.53033, -4, 0.53033, 0.579758, -4, 0.475795, 0.623602, -4, 0.416678, 0.661441, -4, 0.353548, 0.69291, -4, 0.287013, 0.717705, -4, 0.217714, 0.735589, -4, 0.146318, 0.746389, -4, 0.0735129, 0.75, -4, 4.59243e-17, 0.746389, -4, -0.0735129, 0.735589, -4, -0.146318, 0.717705, -4, -0.217714, 0.69291, -4, -0.287013, 0.661441, -4, -0.353548, 0.623602, -4, -0.416678, 0.579758, -4, -0.475795, 0.53033, -4, -0.53033, 0.475795, -4, -0.579758, 0.416678, -4, -0.623602, 0.353548, -4, -0.661441, 0.287013, -4, -0.69291, 0.217714, -4, -0.717705, 0.146318, -4, -0.735589, 0.0735129, -4, -0.746389, 9.18485e-17, -4, -0.75, -0.0735129, -4, -0.746389, -0.146318, -4, -0.735589, -0.217714, -4, -0.717705, -0.287013, -4, -0.69291, -0.353548, -4, -0.661441, -0.416678, -4, -0.623602, -0.475795, -4, -0.579758, -0.53033, -4, -0.53033, -0.579758, -4, -0.475795, -0.623602, -4, -0.416678, -0.661441, -4, -0.353548, -0.69291, -4, -0.287013, -0.717705, -4, -0.217714, -0.735589, -4, -0.146318, -0.746389, -4, -0.0735129, -0.75, -4, -1.37773e-16, -0.746389, -4, 0.0735129, -0.735589, -4, 0.146318, -0.717705, -4, 0.217714, -0.69291, -4, 0.287013, -0.661441, -4, 0.353548, -0.623602, -4, 0.416678, -0.579758, -4, 0.475795, -0.53033, -4, 0.53033, -0.475795, -4, 0.579758, -0.416678, -4, 0.623602, -0.353548, -4, 0.661441, -0.287013, -4, 0.69291, -0.217714, -4, 0.717705, -0.146318, -4, 0.735589, -0.0735129, -4, 0.746389, -1.83697e-16, -4, 0.75 )

[sub_resource type="ConvexPolygonShape" id=14]
points = PoolVector3Array( -100, 10, 250, 100, 10, -250, 100, 10, 250, -100, 10, -250, -100, -10, 250, 100, -10, -250, 100, -10, 250, -100, -10, -250, 100, 10, 250, -100, 10, -250, 100, 10, -250, -100, 10, 250, 100, -10, 250, -100, -10, -250, 100, -10, -250, -100, -10, 250, 100, 10, 250, -100, -10, 250, -100, 10, 250, 100, -10, 250, 100, 10, -250, -100, -10, -250, -100, 10, -250, 100, -10, -250 )

[sub_resource type="ShaderMaterial" id=15]
render_priority = 3
shader = ExtResource( 22 )
shader_param/amplitude = Vector3( 0.2, 0.15, 0 )
shader_param/frequency = Vector3( 0.25, 0.35, 0 )
shader_param/time = null
shader_param/time_factor = Vector3( 2, 3, 0 )
shader_param/RippleNormal = ExtResource( 8 )

[sub_resource type="PlaneMesh" id=16]
material = SubResource( 15 )
size = Vector2( 125, 200 )
subdivide_width = 25
subdivide_depth = 40

[sub_resource type="PrismMesh" id=17]

[node name="Root" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.619626, 0.563932, 0.545934, -0.454088, -0.309776, 0.83537, 0.640209, -0.765519, 0.0641295, 0, 28.6956, 0 )
shadow_contact = 0.69

[node name="Tub" parent="." instance=ExtResource( 2 )]

[node name="Faucet" type="Spatial" parent="."]
transform = Transform( -1.74846e-07, 0, 4, 0, 4, 0, -4, 0, -1.74846e-07, 0, -15, 60 )

[node name="Path" type="Path" parent="Faucet"]
curve = SubResource( 3 )

[node name="CSGPolygon" type="CSGPolygon" parent="Faucet"]
polygon = PoolVector2Array( 1, 0, 0.866, -0.5, 0.5, -0.866, 0, -1, -0.5, -0.866, -0.866, -0.5, -1, 0, -0.866, 0.5, -0.5, 0.866, 0, 1, 0.5, 0.866, 0.866, 0.5 )
mode = 2
path_node = NodePath("../Path")
path_interval = 0.5
path_rotation = 2
path_local = false
path_continuous_u = false
path_joined = false
smooth_faces = true
material = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Faucet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="Particles" type="Particles" parent="Faucet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.97143, 0 )
amount = 200
lifetime = 3.0
local_coords = false
process_material = SubResource( 12 )
draw_pass_1 = ExtResource( 4 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Faucet"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 3.30736, 0 )
stream = ExtResource( 5 )
unit_db = 3.0
unit_size = 20.0
autoplay = true
max_distance = 50.0

[node name="FaucetArea" type="Area" parent="Faucet"]
collision_layer = 64
collision_mask = 12
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Faucet/FaucetArea"]
shape = SubResource( 13 )

[node name="Water" type="WaterArea" parent="."]
collision_layer = 2
collision_mask = 28
script = ExtResource( 7 )
amplitude = Vector2( 0.35, 0.2 )
frequency = Vector2( 0.125, 0.25 )
time_factor = Vector2( 1, 1 )

[node name="CollisionShape" type="CollisionShape" parent="Water"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )
shape = SubResource( 14 )

[node name="WaterMesh" type="MeshInstance" parent="Water"]
mesh = SubResource( 16 )
material/0 = null

[node name="Intro" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="Duck" parent="Intro" instance=ExtResource( 10 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )
axis_lock_linear_x = true
axis_lock_linear_z = true
axis_lock_angular_y = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Intro"]
stream = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 12 )]
collision_layer = 4
collision_mask = 25

[node name="InputManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 13 )

[node name="OrbitTargetCam" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.0834, 0 )
visible = false
target = NodePath("../Intro/Duck")
height = 6.0

[node name="Preloader" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20, 0 )
script = ExtResource( 15 )

[node name="GunFX" type="Spatial" parent="."]
script = ExtResource( 16 )

[node name="DuckLauncher1" type="Spatial" parent="."]
transform = Transform( -0.573577, 0.409576, -0.709406, 0, 0.866025, 0.5, 0.819152, 0.286788, -0.496732, 57.6188, 11.0491, 64.1076 )
script = ExtResource( 17 )
maxDucks = 5
launchInterval = 10
launchSpeed = 120000

[node name="MeshInstance" type="MeshInstance" parent="DuckLauncher1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 17 )
material/0 = null

[node name="DuckLauncher2" type="Spatial" parent="."]
transform = Transform( -0.573576, -0.409576, 0.709406, 0, 0.866025, 0.5, -0.819152, 0.286788, -0.496732, -57.619, 11.049, 64.108 )
script = ExtResource( 17 )
maxDucks = 5
launchInterval = 10
launchSpeed = 120000

[node name="MeshInstance" type="MeshInstance" parent="DuckLauncher2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 17 )
material/0 = null

[node name="DuckLauncher3" type="Spatial" parent="."]
transform = Transform( 0.819152, 0.286788, -0.496732, 0, 0.866025, 0.5, 0.573577, -0.409576, 0.709406, 57.619, 11.049, -64.108 )
script = ExtResource( 17 )
maxDucks = 5
launchInterval = 10
launchSpeed = 120000

[node name="MeshInstance" type="MeshInstance" parent="DuckLauncher3"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 17 )
material/0 = null

[node name="DuckLauncher4" type="Spatial" parent="."]
transform = Transform( 0.819152, -0.286788, 0.496732, 0, 0.866025, 0.5, -0.573577, -0.409576, 0.709406, -57.619, 11.049, -64.108 )
script = ExtResource( 17 )
maxDucks = 5
launchInterval = 10
launchSpeed = 120000

[node name="MeshInstance" type="MeshInstance" parent="DuckLauncher4"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 17 )
material/0 = null

[node name="GameOverlay" parent="." instance=ExtResource( 18 )]
visible = false
crosshairLevel = 1

[node name="TitleScreen" parent="." instance=ExtResource( 19 )]

[node name="PausedScreen" parent="." instance=ExtResource( 20 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -80.0
margin_right = 200.0
margin_bottom = 120.0

[node name="GameOverScreen" parent="." instance=ExtResource( 21 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -200.0
margin_right = 360.0
margin_bottom = 200.0
[connection signal="gun_heat_changed" from="Player" to="GameOverlay" method="_on_Player_gun_heat_changed"]
[connection signal="gun_target_changed" from="Player" to="OrbitTargetCam" method="_on_Player_gun_target_changed"]
[connection signal="health_changed" from="Player" to="InputManager" method="_on_Player_health_changed"]
[connection signal="health_changed" from="Player" to="GameOverlay" method="_on_Player_health_changed"]
[connection signal="crosshair_position_changed" from="OrbitTargetCam" to="GameOverlay" method="_on_OrbitTargetCam_crosshair_position_changed"]
[connection signal="look_position_changed" from="OrbitTargetCam" to="Player" method="_on_OrbitTargetCam_look_position_changed"]
[connection signal="game_started" from="TitleScreen" to="Intro" method="_on_TitleScreen_game_started"]
